<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".Activities.MatchActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_name_team_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team_a"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="@dimen/big_text" />


            <Button
                    android:id="@+id/bt_team_a_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_3_points"
                android:textColor="#FFF"
                android:background= "#E10B0B"/>

            <Button
                    android:id="@+id/bt_team_a_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_2_points"
                android:textColor="#FFF"
                android:background= "#E10B0B"/>

            <Button
                    android:id="@+id/bt_team_a_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_free_throw"
                android:textColor="#FFF"
                android:background= "#E10B0B"/>

            <Button
                    android:id="@+id/bt_reset_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginBottom="@dimen/medium_gap"
                    android:text="@string/action_reset" />

        </LinearLayout>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginRight="@dimen/medium_gap"
                android:background="#D8D4D4" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_name_team_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team_b"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="@dimen/big_text" />

            <Button
                    android:id="@+id/bt_team_b_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_3_points"
                android:textColor="#FFF"
                android:background= "#034B9E"/>

            <Button
                    android:id="@+id/bt_team_b_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_2_points"
                android:textColor="#FFF"
                android:background= "#034B9E"/>

            <Button
                    android:id="@+id/bt_team_b_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:text="@string/action_free_throw"
                android:textColor="#FFF"
                android:background= "#034B9E"/>

            <Button
                    android:id="@+id/bt_reset_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:layout_marginBottom="@dimen/medium_gap"
                    android:text="@string/action_reset" />

        </LinearLayout>

    </LinearLayout>

    <Button
            android:layout_gravity="center"
            android:id="@+id/bt_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terminar partido"/>

    <Button
            android:layout_gravity="center"
            android:id="@+id/bt_final_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resultados Finales"/>


</LinearLayout>